update all other dependencies to their latest